We now have running code....

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Refference material that doesn't need to be published in the repo
+_Ref/
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
