--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CryptoHashTest.cs" />
+    <Compile Include="GenericTestHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VersionTest.cs" />
   </ItemGroup>
