--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -45,6 +45,7 @@
     <Compile Include="GenericHash.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShortHash.cs" />
     <Compile Include="SodiumVersion.cs" />
   </ItemGroup>
   <ItemGroup>
