Added crypto_secretbox & crypto_secretbox_open

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CryptoHashTest.cs" />
     <Compile Include="GenericTestHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecretBoxTest.cs" />
     <Compile Include="ShortHashTest.cs" />
     <Compile Include="VersionTest.cs" />
   </ItemGroup>
