--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="CryptoHashTest.cs" />
     <Compile Include="GenericTestHash.cs" />
+    <Compile Include="OneTimeAuthTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecretBoxTest.cs" />
     <Compile Include="ShortHashTest.cs" />
