--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CryptoHash.cs" />
     <Compile Include="GenericHash.cs" />
     <Compile Include="OneTimeAuth.cs" />
+    <Compile Include="SecretKeyAuth.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecretBox.cs" />
