Added crypto_sign_keypair, crypto_sign, and crypto_sign_open
,
,

--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="CryptoHash.cs" />
     <Compile Include="GenericHash.cs" />
+    <Compile Include="KeyPair.cs" />
     <Compile Include="OneTimeAuth.cs" />
+    <Compile Include="PublicKeyAuth.cs" />
     <Compile Include="SecretKeyAuth.cs" />
     <Compile Include="StreamEncryption.cs" />
     <Compile Include="Utilities.cs" />
