--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GenericTestHash.cs" />
     <Compile Include="OneTimeAuthTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PublicKeyAuthTests.cs" />
     <Compile Include="SecretBoxTest.cs" />
     <Compile Include="SecretKeyAuthTest.cs" />
     <Compile Include="ShortHashTest.cs" />
