Added crypto_box_keypair, crypto_box, and crypto_box_open

--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -46,6 +46,7 @@
     <Compile Include="KeyPair.cs" />
     <Compile Include="OneTimeAuth.cs" />
     <Compile Include="PublicKeyAuth.cs" />
+    <Compile Include="PublicKeyBox.cs" />
     <Compile Include="SecretKeyAuth.cs" />
     <Compile Include="StreamEncryption.cs" />
     <Compile Include="Utilities.cs" />
