--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="OneTimeAuthTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicKeyAuthTests.cs" />
+    <Compile Include="PublicKeyBoxTest.cs" />
     <Compile Include="SecretBoxTest.cs" />
     <Compile Include="SecretKeyAuthTest.cs" />
     <Compile Include="ShortHashTest.cs" />
