--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecretBox.cs" />
     <Compile Include="ShortHash.cs" />
-    <Compile Include="SodiumVersion.cs" />
+    <Compile Include="SodiumCore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Dependencies\libsodium-4.dll" />
