--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicKeyAuthTests.cs" />
     <Compile Include="PublicKeyBoxTest.cs" />
+    <Compile Include="RandomBytesTest.cs" />
     <Compile Include="SecretBoxTest.cs" />
     <Compile Include="SecretKeyAuthTest.cs" />
     <Compile Include="ShortHashTest.cs" />
