--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="nunit.framework, Version=2.6.0.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+    <Reference Include="nunit.framework">
       <Private>False</Private>
       <Package>mono-nunit</Package>
     </Reference>
