copy required dep to output folder

--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -102,7 +102,9 @@
     <Compile Include="ScalarMult.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Dependencies\libsodium.dll" />
+    <None Include="Dependencies\libsodium.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
