fixes #4 including dllmap fix mono tests for osx
The following changes address the problem of the tests not being able to
find the compiled libsodium.dylib.

For mono running x86, libsodium.dylib needs to be arch i386

All tests passes

--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -105,6 +105,7 @@
     <None Include="Dependencies\libsodium.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
