--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: c
 install:
-  - sudo apt-get install mono-devel mono-gmcs
+  - sudo apt-get install mono-devel mono-gmcs nunit-console
 script:
   - xbuild libsodium-net.sln
+  - nunit-console ./Tests/bin/Debug/Tests.dll
