--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: c
 install:
-  - sudo apt-get install mono-devel mono-gmcs nunit-console
+  - sudo apt-get install mono-devel mono-gmcs
 script:
   - xbuild libsodium-net.sln
-  - nunit-console ./Tests/bin/Debug/Tests.dll
