--- a/libsodium-net/App.config
+++ b/libsodium-net/App.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <dllmap os="osx" dll="libsodium" target="/usr/local/lib/libsodium.dylib"/>
+  <dllmap os="linux" dll="libsodium" target="/usr/local/lib/libsodium.so"/>
 </configuration>
