Work around Travis bug in how env var is set.
TRAVIS_OS_NAME isn't set of the repo isn't setup for multi OS support,
which breaks the build. So work around until the bug is fixed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: c
+
 os:
  - osx
  - linux
+
+env:
+ - TRAVIS_OS_UNAME=$(uname -s)
+
 install:
- - if [ "${TRAVIS_OS_NAME}" = "linux" ]; then bash travis-linux-deps.sh; fi
- - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then bash travis-osx-deps.sh; fi
+ - if [[ $TRAVIS_OS_UNAME = 'Linux' ]]; then bash travis-linux-deps.sh; fi
+ - if [[ $TRAVIS_OS_UNAME = 'Darwin' ]]; then bash travis-osx-deps.sh; fi
+
 before_script:
  - bash travis-build-libsodium.sh
+
 script:
  - xbuild libsodium-net.sln
  - nunit-console ./Tests/bin/Debug/Tests.dll
