Try another route to run nunit under .NET 4

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ before_script:
 
 script:
  - xbuild libsodium-net.sln
- - nunit-console ./Tests/bin/Debug/Tests.dll
+ - bash nunit-console.sh ./Tests/bin/Debug/Tests.dll
