Towards #24 - post build event for libsodium-net
Copy the dll's based on the platform

Towards #24 - post build event for Test proj

Copy the dll's based on the platform

Should check condition on variable $OS not $Platform fixes #24

This includes too small fix to post build it on windows

remove added whitespace on Tests.csproj

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -122,4 +122,10 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <PropertyGroup Condition="$(OS) == 'Windows_NT'">
+    <PostBuildEvent>xcopy /y /r "$(TargetDir)Dependencies\*.dll" "$(TargetDir)"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup Condition="$(OS) != 'Windows_NT'">
+    <PostBuildEvent>cp -r $(TargetDir)Dependencies/*.dll .</PostBuildEvent>
+  </PropertyGroup>
 </Project>
