--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
+    <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{9A3A225B-2940-42B3-81A3-A06565FAB856}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -38,7 +37,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="nunit.framework" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CryptoHashTest.cs" />
@@ -75,4 +76,7 @@
   <PropertyGroup Condition="$(OS) != 'Windows_NT'">
     <PostBuildEvent>cp -r $(TargetDir)Dependencies/*.dll .</PostBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
