--- a/libsodium-net.nuspec
+++ b/libsodium-net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>libsodium-net</id>
-        <version>0.4.0-beta</version>
+        <version>0.4.0-beta2</version>
         <title>libsodium for .NET</title>
         <authors>adamcaudill</authors>
         <licenseUrl>https://raw.githubusercontent.com/adamcaudill/libsodium-net/master/LICENSE</licenseUrl>
