Fix project file
Long day, keeps getting longer...

--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="CryptoHash.cs" />
     <Compile Include="GenericHash.cs" />
-    <Compile Include="Detached.cs" />
+    <Compile Include="DetachedBox.cs" />
     <Compile Include="KeyPair.cs" />
     <Compile Include="OneTimeAuth.cs" />
     <Compile Include="PublicKeyAuth.cs" />
