--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -43,6 +43,13 @@
   <ItemGroup>
     <Compile Include="CryptoHash.cs" />
     <Compile Include="DynamicInvoke.cs" />
+    <Compile Include="Exceptions\KeyOutOfRangeException.cs" />
+    <Compile Include="Exceptions\NonceOutOfRangeException.cs" />
+    <Compile Include="Exceptions\PersonalOutOfRangeException.cs" />
+    <Compile Include="Exceptions\BytesOutOfRangeException.cs" />
+    <Compile Include="Exceptions\SignatureOutOfRangeException .cs" />
+    <Compile Include="Exceptions\SaltOutOfRangeException.cs" />
+    <Compile Include="Exceptions\MacOutOfRangeException.cs" />
     <Compile Include="GenericHash.cs" />
     <Compile Include="DetachedBox.cs" />
     <Compile Include="KeyPair.cs" />
