Authenticated Encryption with Additional Data
- Added crypto_aead_chacha20poly1305_encrypt
- Added crypto_aead_chacha20poly1305_decrypt
- Added new Exception AdditionalDataOutOfRange
- Added related tests

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CryptoHashTest.cs" />
+    <Compile Include="SecretAeadExceptionTest.cs" />
+    <Compile Include="SecretAeadTest.cs" />
     <Compile Include="SecretKeyAuthExceptionTest.cs" />
     <Compile Include="StreamEncryptionExceptionTest.cs" />
     <Compile Include="UtilitiesExceptionTest.cs" />
