--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CryptoHashTest.cs" />
+    <Compile Include="GenericHashAlgorithmTest.cs" />
     <Compile Include="SecretAeadExceptionTest.cs" />
     <Compile Include="SecretAeadTest.cs" />
     <Compile Include="SecretKeyAuthExceptionTest.cs" />
