Renamed SealedBox to SealedPublicKeyBox
Fixes #104

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="CryptoHashTest.cs" />
     <Compile Include="GenericHashAlgorithmTest.cs" />
-    <Compile Include="SealedBoxTest.cs" />
+    <Compile Include="SealedPublicKeyBoxTest.cs" />
     <Compile Include="SecretAeadExceptionTest.cs" />
     <Compile Include="SecretAeadTest.cs" />
     <Compile Include="SecretKeyAuthExceptionTest.cs" />
