--- a/libsodium-net.nuspec
+++ b/libsodium-net.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>libsodium-net</id>
-        <version>0.9.0-beta4</version>
+        <version>0.9.0-beta5</version>
         <title>libsodium for .NET</title>
         <authors>adamcaudill</authors>
         <licenseUrl>https://raw.githubusercontent.com/adamcaudill/libsodium-net/master/LICENSE</licenseUrl>
@@ -16,7 +16,7 @@
             <reference file="Sodium.dll" />
         </references>
         <dependencies>
-            <dependency id="Baseclass.Contrib.Nuget.Output" />
+            <dependency id="Baseclass.Contrib.Nuget.Output" version="2.1.0" />
         </dependencies>
     </metadata>
     <files>
