--- a/libsodium-net/libsodium-net.csproj
+++ b/libsodium-net/libsodium-net.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SecretAeadAes.cs" />
     <Compile Include="CryptoHash.cs" />
     <Compile Include="DynamicInvoke.cs" />
     <Compile Include="Exceptions\AdditionalDataOutOfRangeException.cs" />
