--- a/libsodium-net.nuspec
+++ b/libsodium-net.nuspec
@@ -11,7 +11,7 @@
         <description>A secure cryptographic library</description>
         <copyright>Copyright (c) 2013 - 2015 Adam Caudill &amp; Contributors</copyright>
         <language>en-US</language>
-        <tags>encryption libsodium XSalsa20 Curve25519 Ed25519 Poly1305 NaCl</tags>
+        <tags>encryption libsodium XSalsa20 Curve25519 Ed25519 Poly1305 NaCl AES GCM scrypt</tags>
         <references>
             <reference file="Sodium.dll" />
         </references>
