[WIP] Update mono (#126)
* travis will handle linux mono dep

* travis will handle osx mono dep

* using travis mono BETA for 4.2.0

* specific mono version 4.2.1.102

* latest mono version

* properly calling nuget and NUnit

* Calling xbuild

Thought travis would call it automatically

* bump mono version 4.2.1

* cleanup travis.yml, we don't need that var

* we don't need linux deps script

* we don't need osx deps script

* Revert "cleanup travis.yml, we don't need that var"

This reverts commit 99b33cfb5e8833e2a4e02617896f74cd8c7cecdc.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: c
+language: csharp
+
+mono:
+ - 4.2.1
 
 os:
  - osx
@@ -7,13 +10,15 @@ os:
 env:
  - TRAVIS_OS_UNAME=$(uname -s)
 
+solution: libsodium-net.sln
+
 install:
- - if [[ $TRAVIS_OS_UNAME = 'Linux' ]]; then bash travis-linux-deps.sh; fi
- - if [[ $TRAVIS_OS_UNAME = 'Darwin' ]]; then bash travis-osx-deps.sh; fi
+ - nuget restore libsodium-net.sln
+ - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
 
 before_script:
  - bash travis-build-libsodium.sh
 
 script:
  - xbuild libsodium-net.sln
- - bash nunit-console.sh ./Tests/bin/Debug/Tests.dll
+ - mono ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Tests/bin/Debug/Tests.dll
