--- a/.travis.yml
+++ b/.travis.yml
@@ -8,16 +8,25 @@ env:
     - DOTNET_CLI_TELEMETRY_OPTOUT: 1
     - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
 
+addons:
+  apt:
+    sources:
+      - sourceline: 'dev [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main'
+        key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
+    packages:
+      - dotnet-hostfxr-1.0.1
+      - dotnet-sharedframework-microsoft.netcore.app-1.0.5
+
 matrix:
   fast_finish: true
   include:
     - os: linux
       dist: trusty
       sudo: false
-      dotnet: 1.0.1
+      dotnet: 2.0.0
     - os: osx
       osx_image: xcode9
-      dotnet: 1.0.1
+      dotnet: 2.0.0
 
 notifications:
   email:
