--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 addons:
   apt:
     sources:
-      - sourceline: 'dev [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main'
+      - sourceline: 'deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main'
         key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
     packages:
       - dotnet-hostfxr-1.0.1
