--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,17 @@
 root=true
 
-[*.cs]
+[*.*]
+charset = utf-8
+insert_final_newline = true
+trim_trailing_whitespace = true
+end_of_line = lf
 indent_style = space
+
+[*.cs]
+indent_size = 4
+
+[*.{sln,csproj,yml,config}]
 indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
